fix header ligh responsive. fix responsive spacing for headline

--- a/assets/components/organisms/header/header.scss
+++ b/assets/components/organisms/header/header.scss
@@ -94,6 +94,8 @@
 }
 
 .header-light {
+  padding-left: 0;
+
   .logo {
     margin-right: $spacer;
     padding-right: $spacer;
